tests/baselines/reference/ParameterList7.errors.txt
==== tests/cases/compiler/ParameterList7.ts (2 errors) ====
    class C1 {
     constructor(public p1:string); // ERROR
                 ~~~~~~
!!! ParameterList7.ts(2,14): error TS2246: A parameter property is only allowed in a constructor implementation.
     constructor(private p2:number); // ERROR
                 ~~~~~~~
!!! ParameterList7.ts(3,14): error TS2246: A parameter property is only allowed in a constructor implementation.
     constructor(public p3:any) {} // OK
    }